# trying_tdd

./: CMakeLists.txt  my_test.cpp  quadratic_equation.cpp  quadratic_equation.h
